--- a/app/src/main/res/layout/upgradeitem1.xml
+++ b/app/src/main/res/layout/upgradeitem1.xml
@@ -46,6 +46,8 @@
                 android:text="Name"
                 android:textColor="@color/NameMarketItem"
                 android:textSize="20sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/abc"
                 app:layout_constraintBottom_toTopOf="@+id/ItemAbout"
                 app:layout_constraintStart_toEndOf="@+id/imagecard"
                 android:layout_marginStart="20dp"/>
@@ -55,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-
+                android:fontFamily="@font/abc"
                 android:text="about"
                 android:textColor="@color/TextMarketItem"
                 android:textSize="12sp"
@@ -69,6 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:text="hint"
+                android:fontFamily="@font/abc"
                 android:textColor="@color/Hint"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -81,7 +84,8 @@
                 android:layout_margin="10dp"
                 android:text="48$"
                 android:textColor="@color/CostMarketItem"
-                android:textSize="15sp"
+                android:textSize="20sp"
+                android:fontFamily="@font/abc"
                 app:layout_constraintBottom_toTopOf="@+id/ItemCount"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -92,6 +96,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/ButtonBackground"
                 android:text="Buy"
+                android:fontFamily="@font/abc"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -101,7 +106,8 @@
                 android:layout_height="wrap_content"
                 android:text="5 покупок"
                 android:textColor="@color/CostMarketItem"
-                android:textSize="12sp"
+                android:textSize="15sp"
+                android:fontFamily="@font/abc"
                 app:layout_constraintBottom_toTopOf="@+id/btnBuy"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="5dp"/>
