--- a/app/src/main/res/layout/upgradeitem1.xml
+++ b/app/src/main/res/layout/upgradeitem1.xml
@@ -34,7 +34,7 @@
                     android:layout_width="110dp"
                     android:layout_height="110dp"
                     android:background="@color/BackMarketItemImage"
-                    android:foreground="@drawable/okantovka"
+                    android:foreground="@drawable/okantovka_market_item"
                     android:scaleType="centerCrop"
                     app:srcCompat="@drawable/shovel" />
             </androidx.cardview.widget.CardView>
@@ -43,24 +43,25 @@
                 android:id="@+id/ItemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/molot"
                 android:text="Name"
                 android:textColor="@color/NameMarketItem"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
-                android:fontFamily="@font/abc"
                 app:layout_constraintBottom_toTopOf="@+id/ItemAbout"
                 app:layout_constraintStart_toEndOf="@+id/imagecard"
-                android:layout_marginStart="20dp"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/ItemAbout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:fontFamily="@font/abc"
+                android:fontFamily="@font/molot"
                 android:text="about"
                 android:textColor="@color/TextMarketItem"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 app:layout_constraintBottom_toTopOf="@+id/ItemHint"
                 app:layout_constraintStart_toEndOf="@+id/imagecard"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -84,7 +85,7 @@
                 android:layout_margin="10dp"
                 android:text="48$"
                 android:textColor="@color/CostMarketItem"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:fontFamily="@font/abc"
                 app:layout_constraintBottom_toTopOf="@+id/ItemCount"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -106,7 +107,7 @@
                 android:layout_height="wrap_content"
                 android:text="5 покупок"
                 android:textColor="@color/CostMarketItem"
-                android:textSize="15sp"
+                android:textSize="13sp"
                 android:fontFamily="@font/abc"
                 app:layout_constraintBottom_toTopOf="@+id/btnBuy"
                 app:layout_constraintEnd_toEndOf="parent"
