--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,29 +19,28 @@
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:foreground="@drawable/okantovka_recyclerview_main"
         android:id="@+id/RecyclerPotato"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/potatobtn"
+        android:foreground="@drawable/okantovka_recyclerview_main"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.43"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/money" />
 
     <ImageButton
         android:id="@+id/potatobtn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:background="@color/BackMain"
         android:scaleType="centerInside"
-        android:src="@drawable/potato"
         android:soundEffectsEnabled="false"
-        app:layout_constraintBottom_toTopOf="@+id/btnmarket"
+        android:src="@drawable/potato"
+        app:layout_constraintBottom_toTopOf="@+id/Perchi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/RecyclerPotato" />
@@ -56,7 +55,9 @@
         android:src="@drawable/store"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnskip"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+
+        />
 
     <ImageButton
         android:id="@+id/btnskip"
@@ -75,10 +76,42 @@
         android:id="@+id/btnProg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Прогресс"
-        android:fontFamily="@font/molot"
         android:background="@drawable/button_design"
+        android:fontFamily="@font/molot"
+        android:text="Прогресс"
         app:layout_constraintBottom_toBottomOf="@+id/money"
-        app:layout_constraintEnd_toEndOf="parent" />
+        />
+
+    <TextView
+        android:id="@+id/SlavesTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:fontFamily="@font/molot"
+        app:layout_constraintBottom_toBottomOf="@+id/money"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/Perchi"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:text="х2 Клик"
+        android:background="@drawable/button_design"
+        android:fontFamily="@font/molot"
+        app:layout_constraintBottom_toTopOf="@+id/btnmarket"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/PerchiKD"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0.0/10.0"
+        android:fontFamily="@font/molot"
+        android:layout_marginStart="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnmarket"
+        app:layout_constraintStart_toEndOf="@+id/Perchi"
+        app:layout_constraintTop_toBottomOf="@+id/potatobtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
