--- a/app/src/main/res/layout/main_plant_bar.xml
+++ b/app/src/main/res/layout/main_plant_bar.xml
@@ -20,7 +20,7 @@
 
             <ImageView
                 android:id="@+id/ImageRecyclerBar"
-                android:layout_width="100dp"
+                android:layout_width="75dp"
                 android:layout_height="75dp"
                 android:foreground="@drawable/okantovka_market_item"
                 android:scaleType="centerCrop"
@@ -33,9 +33,9 @@
                 android:id="@+id/TxtRecyclerBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/molot"
                 android:text="TextView"
                 android:textSize="15sp"
-                android:fontFamily="@font/molot"
                 app:layout_constraintEnd_toStartOf="@+id/minus_button"
                 app:layout_constraintStart_toEndOf="@+id/ImageRecyclerBar" />
 
@@ -57,9 +57,10 @@
                 android:textSize="15sp"
                 android:padding="0dp"
                 android:textStyle="bold"
+                android:layout_marginEnd="30dp"
                 android:backgroundTint="@color/ButtonBackground"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/Slaves"
+                app:layout_constraintEnd_toStartOf="@+id/plus_button"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -71,6 +72,7 @@
                 android:text="0"
                 android:fontFamily="@font/molot"
                 android:textSize="20sp"
+                android:layout_marginEnd="6dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/plus_button"
                 app:layout_constraintTop_toTopOf="parent" />
